# internal/types/transfer_complete_response.go
@@ -1,155 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package types
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// TransferCompleteResponse transfer complete response
-//
-// swagger:model transferCompleteResponse
-type TransferCompleteResponse struct {
-
-	// batch info
-	// Required: true
-	BatchInfo *BatchInfo `json:"batch_info"`
-
-	// data
-	// Required: true
-	Data *TransferResponse `json:"data"`
-}
-
-// Validate validates this transfer complete response
-func (m *TransferCompleteResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateBatchInfo(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateData(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *TransferCompleteResponse) validateBatchInfo(formats strfmt.Registry) error {
-
-	if err := validate.Required("batch_info", "body", m.BatchInfo); err != nil {
-		return err
-	}
-
-	if m.BatchInfo != nil {
-		if err := m.BatchInfo.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("batch_info")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("batch_info")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *TransferCompleteResponse) validateData(formats strfmt.Registry) error {
-
-	if err := validate.Required("data", "body", m.Data); err != nil {
-		return err
-	}
-
-	if m.Data != nil {
-		if err := m.Data.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("data")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("data")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// ContextValidate validate this transfer complete response based on the context it is used
-func (m *TransferCompleteResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateBatchInfo(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateData(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *TransferCompleteResponse) contextValidateBatchInfo(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.BatchInfo != nil {
-		if err := m.BatchInfo.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("batch_info")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("batch_info")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *TransferCompleteResponse) contextValidateData(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.Data != nil {
-		if err := m.Data.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("data")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("data")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *TransferCompleteResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *TransferCompleteResponse) UnmarshalBinary(b []byte) error {
-	var res TransferCompleteResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
